--- a/companywebsite/static/home.html
+++ b/companywebsite/static/home.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>EduSoft Private Limited</title>
+    <title>Jy Private Limited</title>
     <link rel="stylesheet" href="./css/layout.css" />
     <link rel="icon" href="./img/icon.png" type="image/x-icon" />
   </head>
 
   <body>
     <div class="container">
-      <div class="banner">EduSoft Private Limited.</div>
+      <div class="banner">Jy Private Limited.</div>
       <div class="menu">
         <div class="menuitemselected"><a href="/static/home.html">Home</a></div>
         <div class="menuitem"><a href="/static/products.html">Products</a></div>
-        <div class="menuitem"><a>People</a></div>
-        <div class="menuitem"><a>Contact Us</a></div>
+        <div class="menuitem"><a href="/static/people.html">People</a></div>
+        <div class="menuitem"><a href="/static/Contact Us">Contact Us</a></div>
       </div>
       <div class="content">
         <div class="homecontent">
-          <h1>About Us</h1>
-          <img src="./img/building.png" alt="Building" />
+          <h1>About us</h1>
+          <img src="./img/building1.jpg" alt="Building1" />
           <div class="contenttext">
             At Tally, we believe in the power of technology to make business
             owners efficient, empowered and happier, so they can focus on what
@@ -42,7 +42,7 @@
         </div>
       </div>
       <div class="footer">
-        Copyright &#169; 2021 EduSoft Private Limited, Developed by Obed Otto.
+        Copyright &#169; 2021 Jy Private Limited, Developed by Jayanth yadav.
       </div>
     </div>
   </body>
